--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 </script>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KWHEP1WG33"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0RB553QFSN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-KWHEP1WG33');
+  gtag('config', 'G-0RB553QFSN');
 </script>
 </head>
 
