--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="rs/imgs/basketbros.png">
-    <title>Block Blast | Play Online for Free! </title>
-    <meta name="keywords" content="block blast, block blast unblocked, block puzzle, puzzle block, block puzzles, wooden block puzzle, game block, block puzzle game, block puzzle classic, block puzzle free, block puzzle offline, block puzzle app, block puzzle android, block puzzle download, block puzzle online, block puzzle fun, block puzzle game free, block pozel">
-    <meta name="news_keywords" content="Block Blast">
+    <title>Pac-man | Play google pac-man Online for Free! </title>
+    <meta name="keywords" content="pacman game, pacman, pac-man, google pac-man, pac man, play pacman, classic pacman, pacman online, free pacman, retro games, arcade games, old school games, pacman unblocked, pacman for kids, google games, pacman browser game, play pac-man, pac-man game online, pacman arcade, pacman classic">
+    <meta name="news_keywords" content="pac man">
     <link rel="canonical" href="/">
     <meta name="publisher" content="">
     <meta name="author" content="">
      <meta name="robots" content="index, follow">
-    <meta name="description" content="Play Block Blast – the ultimate brain teaser that blends classic block puzzles with explosive fun! Drag, drop, and blast your way to high scores in this addictive, fast-paced puzzle game.">
+    <meta name="description" content="Play the classic Pacman game online for free! Enjoy Pacman, Pac-Man, Google Pac-Man, and more retro arcade fun in one place.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,25 +27,25 @@
 {
   "@context": "https://schema.org",
   "@type": "VideoGame",
-  "name": "Block Balst",
-  "url": "https://block-blast.bitbucket.io/",
-  "image": "https://basket-bros.io/assets/images/thumbnail.jpg",
-  "description": "Play Block Blast – the ultimate brain teaser that blends classic block puzzles with explosive fun! Drag, drop, and blast your way to high scores in this addictive, fast-paced puzzle game.",
+  "name": "Pac-man",
+  "url": "https://play-pac-man.github.io/",
+  "image": "https://play-pac-man.github.io/icon/ios_icon.png",
+  "description": "Play the classic Pacman game online for free! Enjoy Pacman, Pac-Man, Google Pac-Man, and more retro arcade fun in one place.",
   "author": {
     "@type": "Organization",
-    "name": "Hungry Studio"
+    "name": " Atari, Inc., Namco, Namco Bandai Games America Inc., Hamster Corporation, Gremlin Industries, Namco Networks"
   },
   "publisher": {
     "@type": "Organization",
-    "name": "Block Blast",
-    "url": "https://block-blast.bitbucket.io/",
+    "name": "Pac-man",
+    "url": "https://play-pac-man.github.io/",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://block-blast.bitbucket.io//rs/imgs/block-blast.png"
+      "url": "https://play-pac-man.github.io/icon/ios_icon.png"
     }
   },
   "applicationCategory": "Game",
-  "genre": ["puzzle"],
+  "genre": ["Arcade video game, Nintendo Switch, PlayStation 4"],
   "operatingSystem": "All",
   "gamePlatform": [
     "Web browser",
@@ -53,8 +53,7 @@
     "Mobile"
   ],
   "playMode": [
-    "SinglePlayer",
-    "MultiPlayer"
+    "SinglePlayer"
   ],
   "inLanguage": "en"
 }
