--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="external" content="true">
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
-    <link rel="icon" href="rs/imgs/basketbros.png">
+    <link rel="icon" href="/icon/favicon.png">
     <title>Pac-man | Play google pac-man Online for Free! </title>
     <meta name="keywords" content="pacman game, pacman, pac-man, google pac-man, pac man, play pacman, classic pacman, pacman online, free pacman, retro games, arcade games, old school games, pacman unblocked, pacman for kids, google games, pacman browser game, play pac-man, pac-man game online, pacman arcade, pacman classic">
     <meta name="news_keywords" content="pac man">
     <link rel="canonical" href="/">
-    <meta name="publisher" content="">
-    <meta name="author" content="">
+    <meta name="publisher" content=" Nintendo">
+    <meta name="author" content="  Atari, Inc., Namco, Namco Bandai Games America Inc., Hamster Corporation, Gremlin Industries, Namco Networks">
      <meta name="robots" content="index, follow">
     <meta name="description" content="Play the classic Pacman game online for free! Enjoy Pacman, Pac-Man, Google Pac-Man, and more retro arcade fun in one place.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
@@ -76,7 +76,7 @@
         <div class="row">
             <div class="p-r d-flex sp al header-bar">
                 <div class="bar-logo">
-                    <a class="logo-text" href="/">Block Blast</a>
+                    <a class="logo-text" href="/">Pacman</a>
                 </div>
                
                 <div class="center-box merge_icon icon-menu-mobile">
@@ -119,10 +119,10 @@ Say goodbye to boredom and hello to the ultimate brain-boosting puzzle adventure
             <div class="main-flex">
                 <div class="row">
                     <div class="frame-box-game">
-                        <iframe title="Block Blast" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="/pac-man" frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
+                        <iframe title="Pacman" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="/pac-man" frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
                         <div class="header-game">
                             <div class="box-header">
-                                <h1>Block Blast</h1>
+                                <h1>Pacman</h1>
                                 <div class="header-game-extend">
                                     <span class="us-expand" id="half-expand" onclick="theaterMode()">
                                         <svg class="scale-anim" width="24" height="24" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--gis" preserveAspectRatio="xMidYMid meet">
