--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="/icon/favicon.png">
-    <title>Pac-man | Play google pac-man Online for Free! </title>
+    <title>Pacman | Play google pac-man Online for Free! </title>
     <meta name="keywords" content="pacman game, pacman, pac-man, google pac-man, pac man, play pacman, classic pacman, pacman online, free pacman, retro games, arcade games, old school games, pacman unblocked, pacman for kids, google games, pacman browser game, play pac-man, pac-man game online, pacman arcade, pacman classic">
     <meta name="news_keywords" content="pac man">
     <link rel="canonical" href="/">
     <meta name="publisher" content=" Nintendo">
     <meta name="author" content="  Atari, Inc., Namco, Namco Bandai Games America Inc., Hamster Corporation, Gremlin Industries, Namco Networks">
      <meta name="robots" content="index, follow">
-    <meta name="description" content="Play the classic Pacman game online for free! Enjoy Pacman, Pac-Man, Google Pac-Man, and more retro arcade fun in one place.">
+    <meta name="description" content="Pacman is a fun and classic game that’s easy to play and perfect for anyone who loves old-school arcade games.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
   "name": "Pac-man",
   "url": "https://play-pac-man.github.io/",
   "image": "https://play-pac-man.github.io/icon/ios_icon.png",
-  "description": "Play the classic Pacman game online for free! Enjoy Pacman, Pac-Man, Google Pac-Man, and more retro arcade fun in one place.",
+  "description": "Pacman is a fun and classic game that’s easy to play and perfect for anyone who loves old-school arcade games.",
   "author": {
     "@type": "Organization",
     "name": " Atari, Inc., Namco, Namco Bandai Games America Inc., Hamster Corporation, Gremlin Industries, Namco Networks"
@@ -112,7 +112,7 @@
     margin-left: 15rem;
     
 ">
-Say goodbye to boredom and hello to the ultimate brain-boosting puzzle adventure! Block Blast isn't just another block-dropping game oh no, it is a wild mix of strategy, speed, and satisfying chain reactions that'll keep your fingers tapping and your mind racing. Whether you’re a puzzle pro or just passing the time, this colorful, fast-paced game will have you hooked from the very first move. Slide, fit, and blast your way through endless challenges as you aim for that sweet high score. But watch out one wrong piece, and its game over!</p></div>
+<strong>Pacman</strong> is a classic arcade game first released in 1980, where players guide a yellow character through a maze, eating dots and avoiding ghosts. Its simple yet challenging gameplay has made it one of the most iconic and beloved video games of all time.</p></div>
 <div id="game-page" class="main">
     <div class="container">
         <div class="row-flex">
