--- a/index.html
+++ b/index.html
@@ -166,34 +166,34 @@
                                 </div>
                             </div>
                             <div class="text-area--content">
-                             <h2>What Is Block Blast?</h2>
-  <p><strong>Block Blast</strong> is a fun, fast-paced block puzzle game that’s taken the mobile world by storm. It combines the brain-teasing challenge of classic puzzle games like Tetris and Sudoku with a modern, colorful twist. Your mission? Drop and fit blocks on a grid to clear full rows or columns. Sounds simple, right? Well, don’t let that fool you—it gets tricky fast!</p>
-  <p>Whether you’re a casual gamer or a serious puzzle lover, <em>Block Blast</em> is perfect for passing time, relaxing your mind, or chasing that next high score.</p>
+                            <h2>What Is Pacman?</h2>
+  <p>Pacman is one of the most iconic and beloved arcade games ever created. Released in 1980, the game features a yellow, circular character named Pacman who navigates a maze while eating pellets and avoiding colorful ghosts. It’s a simple concept, but one that has stood the test of time due to its fast-paced action and addictive gameplay.</p>
+  <p>The goal is to eat all the pellets in the maze while avoiding ghosts. If a ghost touches Pacman, you lose a life. However, eat a power pellet, and the tables turn — Pacman can temporarily eat the ghosts for bonus points.</p>
 
-  <h2>How to Play Block Blast</h2>
-  <p>Getting started with <strong>Block Blast</strong> is easy:</p>
+  <h2>Who Developed Pacman?</h2>
+  <p>Pacman was developed by Namco (now part of Bandai Namco Entertainment) and created by Japanese game designer Toru Iwatani. It was originally released in Japan in May 1980 and later in North America by Midway. The game was designed to appeal to both men and women and to move away from the violence of other arcade games at the time.</p>
+  <p>Pacman's cute character, simple controls, and catchy sound effects helped make it a cultural phenomenon.</p>
+
+  <h2>How to Play Pacman</h2>
+  <p>Playing Pacman is easy to learn, but hard to master. Here's how it works:</p>
   <ul>
-    <li><strong>Drag & Drop Blocks</strong> – You’ll be given a set of blocks in various shapes.</li>
-    <li><strong>Fit Them on the Grid</strong> – Place them strategically on a 9x9 board.</li>
-    <li><strong>Clear Lines</strong> – Complete a full row or column to clear it and earn points.</li>
-    <li><strong>Keep Going</strong> – The game continues until you run out of space to place new blocks.</li>
-  </ul>
-  <p>There are no time limits, so take your time and plan ahead—every move matters!</p>
-
-  <h2>Who Developed Block Blast?</h2>
-  <p><strong>Block Blast!</strong> was developed by <strong>Hungry Studio</strong>, a mobile game studio known for creating simple yet highly addictive puzzle games. With clean visuals and user-friendly gameplay, Hungry Studio hit the sweet spot between casual and challenging fun. You can find the game available on both <strong>iOS</strong> and <strong>Android</strong> platforms.</p>
-
-  <h2>Tips to Get a High Score in Block Blast</h2>
-  <p>Want to climb the leaderboard or just beat your personal best? Here are a few handy tips:</p>
-  <ul>
-    <li><strong>Think Ahead</strong>: Don’t just focus on the current block—look at all three options and plan your placements carefully.</li>
-    <li><strong>Keep Space Open</strong>: Try to avoid filling up the center of the board too quickly. Open space = more flexibility.</li>
-    <li><strong>Clear Multiple Lines</strong>: Combo clears give you big points. Aim to align multiple rows or columns at once.</li>
-    <li><strong>Save Room for Odd Shapes</strong>: L-shaped and large blocks can be hard to place. Leave gaps where they might fit.</li>
-    <li><strong>Practice Makes Perfect</strong>: Like most puzzle games, the more you play, the better you’ll get at spotting patterns and predicting moves.</li>
+    <li>Use arrow keys or joystick to move Pacman through the maze.</li>
+    <li>Eat all the pellets in the maze to move to the next level.</li>
+    <li>Avoid the ghosts (Blinky, Pinky, Inky, and Clyde) — if they catch you, you lose a life.</li>
+    <li>Eat power pellets (large flashing dots) to turn ghosts blue and temporarily eat them for extra points.</li>
+    <li>Fruit bonuses appear occasionally — grab them for extra score boosts.</li>
+    <li>The game ends when all your lives are lost.</li>
   </ul>
 
-  <p>So whether you’re killing time on the train or just want a relaxing way to stay sharp, <em>Block Blast</em> might just be your next go-to game. Give it a shot you might get hooked!</p>
+  <h2>Tips to Get a High Score in Pacman</h2>
+  <p>Want to level up your Pacman game? Here are some practical tips to help you score big:</p>
+  <ol>
+    <li><strong>Memorize Ghost Patterns:</strong> Each ghost has its own movement behavior. Learning how they react and move can help you avoid them more effectively.</li>
+    <li><strong>Use the Tunnels:</strong> The warp tunnels on the sides of the maze can help you escape when you're being chased. Use them wisely!</li>
+    <li><strong>Save Power Pellets:</strong> Don't rush to eat power pellets right away. Wait until ghosts are close so you can eat more of them in one go for higher points.</li>
+    <li><strong>Grab Bonus Fruits:</strong> Each fruit gives you a different point value. Try to grab them when they appear in the maze.</li>
+    <li><strong>Stick to a Route:</strong> Many pro players use planned routes to optimize their pellet collection and avoid getting trapped. You can look up patterns used in professional play.</li>
+  </ol>
                                                   </div>
                         </div>
                     </div>
