--- a/index.html
+++ b/index.html
@@ -167,33 +167,37 @@
                             </div>
                             <div class="text-area--content">
                             <h2>What Is Pacman?</h2>
-  <p>Pacman is one of the most iconic and beloved arcade games ever created. Released in 1980, the game features a yellow, circular character named Pacman who navigates a maze while eating pellets and avoiding colorful ghosts. It’s a simple concept, but one that has stood the test of time due to its fast-paced action and addictive gameplay.</p>
-  <p>The goal is to eat all the pellets in the maze while avoiding ghosts. If a ghost touches Pacman, you lose a life. However, eat a power pellet, and the tables turn — Pacman can temporarily eat the ghosts for bonus points.</p>
+  <p>If you are ever played an arcade game, <strong>Pacman game</strong> classic one with the little yellow guy <strong>Pac-Man</strong> running around a maze, eating dots and dodging ghosts. It first came out way back in 1980, but it’s still fun today.</p>
+  <p>The idea’s pretty simple: You move <strong>Pacman</strong> through the maze, eat all the small dots (called pellets), and try not to get caught by the ghosts. But if you eat one of those big flashing dots (power pellets), the ghosts turn blue — and now you can eat them for extra points!</p>
 
-  <h2>Who Developed Pacman?</h2>
-  <p>Pacman was developed by Namco (now part of Bandai Namco Entertainment) and created by Japanese game designer Toru Iwatani. It was originally released in Japan in May 1980 and later in North America by Midway. The game was designed to appeal to both men and women and to move away from the violence of other arcade games at the time.</p>
-  <p>Pacman's cute character, simple controls, and catchy sound effects helped make it a cultural phenomenon.</p>
+  <h2>Who Made Pacman?</h2>
+  <p><strong>Pacman</strong> was created in Japan by a game designer named <strong>Toru Iwatani</strong>. It was made by a company called <strong>Namco</strong> (now known as Bandai Namco). The game showed up in Japan in 1980, and then in America a bit later, thanks to a company called Midway.</p>
+  <p>Back then, most games were all about shooting or fighting. <strong>Pacman</strong> was different — fun, bright, and easy to play. It was made for everyone, not just boys who liked action games. The cute character, simple controls, and fun music made it a huge hit.</p>
+  <p>Years later, even <strong>Google Pac-Man</strong> became a thing — a fun little version of the game that showed up on Google’s homepage in 2010. It brought back all the nostalgia!</p>
 
-  <h2>How to Play Pacman</h2>
-  <p>Playing Pacman is easy to learn, but hard to master. Here's how it works:</p>
+  <h2>How to Play the Pacman Game</h2>
+  <p>Playing <strong>Pacman</strong> is easy, but beating it? That’s the real challenge! Here's how it works:</p>
   <ul>
-    <li>Use arrow keys or joystick to move Pacman through the maze.</li>
-    <li>Eat all the pellets in the maze to move to the next level.</li>
-    <li>Avoid the ghosts (Blinky, Pinky, Inky, and Clyde) — if they catch you, you lose a life.</li>
-    <li>Eat power pellets (large flashing dots) to turn ghosts blue and temporarily eat them for extra points.</li>
-    <li>Fruit bonuses appear occasionally — grab them for extra score boosts.</li>
-    <li>The game ends when all your lives are lost.</li>
+    <li>Use the arrow keys or joystick to move <strong>Pacman</strong> through the maze.</li>
+    <li>Eat all the pellets to move on to the next level.</li>
+    <li>Watch out for the ghosts: <strong>Blinky</strong>, <strong>Pinky</strong>, <strong>Inky</strong>, and <strong>Clyde</strong>. If one touches you, you lose a life.</li>
+    <li>Power pellets (the big dots) make the ghosts turn blue — now you can eat them for bonus points.</li>
+    <li>Sometimes, fruit shows up in the maze. Eat it for extra points.</li>
+    <li>The game ends when you run out of lives.</li>
   </ul>
 
   <h2>Tips to Get a High Score in Pacman</h2>
-  <p>Want to level up your Pacman game? Here are some practical tips to help you score big:</p>
-  <ol>
-    <li><strong>Memorize Ghost Patterns:</strong> Each ghost has its own movement behavior. Learning how they react and move can help you avoid them more effectively.</li>
-    <li><strong>Use the Tunnels:</strong> The warp tunnels on the sides of the maze can help you escape when you're being chased. Use them wisely!</li>
-    <li><strong>Save Power Pellets:</strong> Don't rush to eat power pellets right away. Wait until ghosts are close so you can eat more of them in one go for higher points.</li>
-    <li><strong>Grab Bonus Fruits:</strong> Each fruit gives you a different point value. Try to grab them when they appear in the maze.</li>
-    <li><strong>Stick to a Route:</strong> Many pro players use planned routes to optimize their pellet collection and avoid getting trapped. You can look up patterns used in professional play.</li>
-  </ol>
+  <p>Wanna crush the leaderboard? Try these simple tips to boost your score:</p>
+  <ul>
+    <li><strong>Learn What the Ghosts Do:</strong> Each ghost moves in a different way. If you learn their patterns, it gets easier to avoid them.</li>
+    <li><strong>Use the Tunnels:</strong> The side tunnels let you move from one side of the maze to the other. Great for escaping ghosts!</li>
+    <li><strong>Don’t Rush the Power Pellets:</strong> Wait until the ghosts are close, then grab the power pellet and go after them.</li>
+    <li><strong>Grab the Fruits:</strong> Cherries, strawberries, and other fruits give you bonus points. Don’t miss them!</li>
+    <li><strong>Follow a Path:</strong> Some players follow the same path every time. It helps collect pellets faster and avoid getting trapped.</li>
+  </ul>
+
+  <p><strong>Pacman</strong> may be old, but it’s still one of the most loved games ever. Whether you're playing in an arcade or enjoying <strong>Google Pac-Man</strong> in your browser, it's always a good time. Fast, fun, and full of classic charm!</p>
+
                                                   </div>
                         </div>
                     </div>
