--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                             </div>
                             <div class="text-area--content">
                             <h2>What Is Pacman?</h2>
-  <p>If you are ever played an arcade game, <strong>Pacman game</strong> classic one with the little yellow guy <strong>Pac-Man</strong> running around a maze, eating dots and dodging ghosts. It first came out way back in 1980, but it’s still fun today.</p>
-  <p>The idea’s pretty simple: You move <strong>Pacman</strong> through the maze, eat all the small dots (called pellets), and try not to get caught by the ghosts. But if you eat one of those big flashing dots (power pellets), the ghosts turn blue — and now you can eat them for extra points!</p>
+  <p>Pacman is one of the most iconic and beloved arcade games ever created. Released in 1980, the game features a yellow, circular character named Pacman who navigates a maze while eating pellets and avoiding colorful ghosts. It’s a simple concept, but one that has stood the test of time due to its fast-paced action and addictive gameplay.</p>
+  <p>The goal is to eat all the pellets in the maze while avoiding ghosts. If a ghost touches Pacman, you lose a life. However, eat a power pellet, and the tables turn — Pacman can temporarily eat the ghosts for bonus points.</p>
 
   <h2>Who Made Pacman?</h2>
   <p><strong>Pacman</strong> was created in Japan by a game designer named <strong>Toru Iwatani</strong>. It was made by a company called <strong>Namco</strong> (now known as Bandai Namco). The game showed up in Japan in 1980, and then in America a bit later, thanks to a company called Midway.</p>
